# HeliosRust

./: .gitignore  Cargo.toml  replit.nix
src/: main.rs
src/core/: meta.rs  mod.rs
src/scraper/: meta.rs  mod.rs  traits.rs
src/scraper/entities/: artwork.rs  certification.rs  country_lang.rs  mod.rs  provider_info.rs
